--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,14 @@
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
 		</dependency>
+		
+		<!-- TestLink -->
+		<dependency>
+    		<groupId>br.eti.kinoshita</groupId>
+    		<artifactId>testlink-java-api</artifactId>
+    		<version>1.9.7-0</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
